examples/fail/semantic/duplicate_local.bina
// EXPECT_SEMANTIC_ERROR: variable 'x' is already declared
fn main() -> int {
    let x = 1;
    let x = 2;
    return x;
}
